# agent-evaluation

./: .containerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  README.md  entrypoint.sh
.cargo/: audit.toml
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  eval-pages.yml  release.yml
agents/: augment-full.toml  augment-iterative.toml  augment-sandboxed.toml  baseline.toml  claude-code-full.toml  claude-code-iterative.toml  claude-code-sandboxed.toml  codex-full.toml  codex-iterative.toml  codex-sandboxed.toml  gestura-full.toml  gestura-iterative.toml  gestura-sandboxed.toml  opencode-full.toml  opencode-iterative.toml  opencode-sandboxed.toml
scripts/: sign-mac.sh  sign-windows-esigner.py
scripts/packaging/: common.sh
src/: cli_runner.rs  comparison.rs  evaluator.rs  html_report.rs  judge.rs  lib.rs  main.rs  orchestrator.rs  progress.rs  report.rs  scenario.rs
src/config/: mod.rs  types.rs
testdata/: scenarios.json
