[package]
name = "agent-evaluation"
version = "0.2.7"
edition = "2024"
license = "LicenseRef-Gestura-Prosperity-1.0"
authors = ["Gestura AI LLC <dev@gestura.ai>"]
description = "Evaluation harness — standardised scenarios run against the agentic CLI utilities."

# Standalone binary: drives the gestura CLI as a black-box subprocess.
# Intentionally separate from the thin gestura binary so eval logic never ships in the product.
[[bin]]
name = "agent-eval"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
toml = "0.8"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
colored = "2"
indicatif = "0.17"
console = "0.15"

